--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     --planet-cont-height:   30vh;
     --hover-diff:           20vh;
     --hover-cont-height:    calc( var(--planet-cont-height) + var(--hover-diff) );
+    --planet-cont-width:    40vh;
 
     --planet-start:         10vh;
     --planet-division:      5vh;
@@ -21,7 +22,8 @@
     --saturn-from-left:     calc( var(--jupiter-from-left) + var(--jupiter-diameter) + var(--planet-division) );
     --uranus-from-left:     calc( var(--saturn-from-left) + var(--saturn-diameter) + var(--planet-division) );
     --neptune-from-left:    calc( var(--uranus-from-left) + var(--uranus-diameter) + var(--planet-division) );
-    --total-width:          calc( var(--neptune-from-left) + var(--neptune-diameter) + var(--planet-division) + var(--planet-start));
+    /* --total-width:          calc( var(--neptune-from-left) + var(--neptune-diameter) + var(--planet-division) + var(--planet-start)); */
+    --total-width:          calc( var(--planet-cont-width) * 8 );
 
     --magnified-width:      35vh;
 
@@ -30,36 +32,43 @@
                                             rgb(177, 173, 173),
                                             rgb(140, 140, 148),
                                             rgb(104, 105, 109));
+
     --venus-color:         linear-gradient(rgb(248, 226, 176),
                                             rgb(238, 203, 139),
                                             rgb(227, 187, 118),
                                             rgb(211, 165, 103),
                                             rgb(173, 141, 84));
+
     --earth-color:          linear-gradient(rgb(79, 76, 176),
                                             rgb(107, 147, 214),
                                             rgb(233, 239, 249),
                                             rgb(159, 193, 100),
                                             rgb(216, 197, 150));
+
     --mars-color:           linear-gradient(rgb(240, 231, 231),
                                             rgb(69, 24, 4),
                                             rgb(193, 68, 14),
                                             rgb(231, 125, 17),
                                             rgb(253, 166, 0));
+
     --jupiter-color:        linear-gradient(rgb(235, 243, 246),
                                             rgb(227, 220, 203),
                                             rgb(216, 202, 157),
                                             rgb(165, 145, 134),
                                             rgb(201, 144, 57));
+
     --saturn-color:         linear-gradient(rgb(206, 184, 184),
                                             rgb(234, 214, 184),
                                             rgb(227, 224, 192),
                                             rgb(191, 189, 175),
                                             rgb(206, 206, 206));
+
     --uranus-color:         linear-gradient(rgb(225, 238, 238),
                                             rgb(209, 231, 231),
                                             rgb(198, 211, 227),
                                             rgb(248, 248, 255),
                                             rgb(217, 221, 244));
+
     --neptune-color:        linear-gradient(rgb(91, 93, 223),
                                             rgb(63, 84, 186),
                                             rgb(39, 70, 135),
@@ -78,22 +87,30 @@ body {
     width: 100%;
     height: var(--hover-cont-height);
     background-color: rgba(255, 255, 255, 0);
-    /* background-color: green; */
-    left: calc( -1 * (var(--total-width) - 100%) / 2 );
+    left: calc( (-1 * (var(--total-width) - 100%) / 2 ) - (var(--planet-cont-width) / 2) );
     top: calc( 50vh - ( var(--hover-cont-height) / 2) );
     z-index: -1;
 }
 
 .planets {
+    display: flex;
     position: absolute;
     height: var(--planet-cont-height);
-    width: var(--total-width);
+    width: calc( var(--planet-cont-width) * 8 );
     align-items: center;
     background-color: rgba(255, 255, 255, 0);
-    /* background-color: green; */
     margin-top: calc(var(--hover-diff) / 2);
     margin-bottom: calc(var(--hover-diff) / 2);
     /* z-index: 1; */
+}
+
+.planet-container {
+    width: var(--planet-cont-width);
+    height: var(--planet-cont-height);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .planet {
@@ -111,7 +128,7 @@ body {
     height:var(--mercury-diameter);
     background: var(--mercury-color);
     margin: auto;
-    left: calc(var(--planet-start));
+    /* left: calc(var(--planet-start)); */
 }
 
 .venus {
@@ -119,7 +136,7 @@ body {
     width: var(--venus-diameter);
     height:var(--venus-diameter);
     margin: auto;
-    left: var(--venus-from-left);
+    /* left: var(--venus-from-left); */
 }
 
 .earth {
@@ -127,7 +144,7 @@ body {
     width: var(--earth-diameter);
     height:var(--earth-diameter);
     margin: auto;
-    left: var(--earth-from-left);
+    /* left: var(--earth-from-left); */
 }
 
 .mars {
@@ -135,7 +152,7 @@ body {
     width:              var(--mars-diameter);
     height:             var(--mars-diameter);
     margin:             auto;
-    left:               var(--mars-from-left);    
+    /* left:               var(--mars-from-left);     */
 }
 
 .jupiter {
@@ -143,7 +160,7 @@ body {
     width:              var(--jupiter-diameter);
     height:             var(--jupiter-diameter);
     margin:             auto;
-    left:               var(--jupiter-from-left);
+    /* left:               var(--jupiter-from-left); */
 }
 
 .saturn {
@@ -151,7 +168,7 @@ body {
     width:              var(--saturn-diameter);
     height:             var(--saturn-diameter);
     margin:             auto;
-    left:               var(--saturn-from-left);
+    /* left:               var(--saturn-from-left); */
 }
 
 .uranus {
@@ -159,7 +176,7 @@ body {
     width:              var(--uranus-diameter);
     height:             var(--uranus-diameter);
     margin:             auto;
-    left:               var(--uranus-from-left);
+    /* left:               var(--uranus-from-left); */
 }
 
 .neptune {
@@ -167,5 +184,21 @@ body {
     width:              var(--neptune-diameter);
     height:             var(--neptune-diameter);
     margin:             auto;
-    left:               var(--neptune-from-left);
+    /* left:               var(--neptune-from-left); */
+}
+
+#line {
+    left: calc(50% - 10vh);
+    top: 33%;
+    /* width: 47px; */
+    height: 33vh;
+    border-left: 5vh solid rgba(255, 255, 255, 0);
+    /* border-left: 5vh solid red; */
+    position: fixed;
+}
+
+#focus-layer {
+    width: 100%;
+    height: 100%;
+    position: fixed;
 }
